--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.5",
     "swagger-ui-express": "^4.6.3",
-    "whatsapp-web.js": "1.23.1-alpha.5"
+    "whatsapp-web.js": "^1.23.0"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
